--- a/css/style.css
+++ b/css/style.css
@@ -25,23 +25,22 @@
 /* Estilização da Scrollbar */
 ::-webkit-scrollbar {
     width: 10px;
-  }
+}
   
   /* Track */
-  ::-webkit-scrollbar-track {
+::-webkit-scrollbar-track {
     background: #393939; 
-  }
+}
    
   /* Handle */
-  ::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
     background: #505050; 
-  }
+}
   
   /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
+::-webkit-scrollbar-thumb:hover {
     background: #454545; 
-  }
-
+}
 
 /*Adicione abaixo outras estilizações*/
 
@@ -70,12 +69,16 @@
     width:100%;
     background-color:#2A2A2A;
     border-bottom:1px solid #393939;
-}
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}   
 
 .logo {
     /* Adicione um espaçamento a esquerda de 24 pixels */
      height:48px;
      width: 48px;
+     margin-left: 24px;
 
 }
 
@@ -83,6 +86,7 @@
     font-family: Vogue;
     font-size: 24px; 
     color: #FAFAFA;
+    padding-top: 12px;
 }  
 
 /* --- Seção: Sobre ------------------- */
@@ -109,45 +113,52 @@
     width: 100%;
     padding-top:32px; 
     padding-bottom: 32px;
+    height: 300px;
 }
 
 /* --- Seção: Parceiros ------------- */
 
-.parceiros-container {
-    background: #2A2A2A;
-    height: 320px;
+.parceiros-container { 
+    background-color: #2A2A2A; 
+    height: 360px;
     width: 100%;
+
+}
+
+.parceiros-titulo {
+    text-align: center;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    font-family: scada;
+    font-size: 42px;
+    font-weight: bold;
 }
 
 /* --- Seção: Contato --------------- */
 .contato-container {
+    display: flex;
     background-color: #303030;
+    height: 384px;
     width: 100%;
     padding-top: 32px;
     padding-bottom: 32px;
+    align-items: center;
 }
     
-/* --- Rodapé ---------------------- */
-.footer {
-    height:144px;
-    width:100%;
-    background-color: #2A2A2A;
-    border-top:1px solid #393939;
-}
-
 /* --- Seção: Serviços ------------- */
 .servicos-container {
     display: flex;
     justify-content: center;
-    background-color: #303030;
     width: 100%;
+    height: 360px;
     padding-top: 32px;
-    padding-bottom: 32px;;
+    padding-bottom: 32px;
+    background-color: #303030;
 }
 
 .servicos-titulo {
-    font-size: 48px; 
     font-family: Scada;
+    font-size: 48px; 
     font-weight: bold;
 }
 
@@ -158,12 +169,65 @@
     text-align: justify;
 }
 
+/* --- Rodapé ---------------------- */
+.footer {
+    /* Adicione uma largura ocupando a tela inteira, cor de fundo #2A2A2A e borda superior de 1 pixel na cor #393939 */
+    width: 100%;
+    background-color: #2A2A2A;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-top: 1px solid #393939;
+    padding-top: 12px;
+    
+}
+
+.footer-dados{
+    display:flex;
+    font-family: Scada;
+    font-size: 16px;
+    padding-bottom: 8px;
+    align-self: center;
+}
+
+.footer-links{
+    display: flex;
+    font-family: Scada;
+    font-size: 16px;
+    padding-bottom: 8px;
+    margin-right: 64px;
+    align-self: center;
+}
+
+.footer-links a{
+    text-decoration: none;
+    color:#8b8b8b;
+    padding-bottom: 8px;
+}
+
 /* --- Componentes ------------------ */
 
 .icone {
     /* Adicione uma margem a direita de 24 pixels */
     height:32px;
     width:32px;
+    margin-right: 24px;
+}
+
+
+.icone-footer {
+    /* Adicione uma margem a direita de 24 pixels */
+    height: 24px;
+    width:24px;
+    margin-right: 13px;
+    margin-left: 24px;
+}
+
+.icone-footer-white {
+    /* Adicione uma margem a direita de 24 pixels */
+    height: 18px;
+    width:18px;
+    margin-right: 13px;
 }
 
 /* Botões */
@@ -180,6 +244,7 @@
     font-size: 24px; /*tamanho do texto*/
     text-decoration: none; /*decoração do link (sublinhado, pontinhos, etc)*/
     padding: 4px 0 4px 0;
+    margin-right: 24px;
     
 }
 
@@ -196,6 +261,7 @@
     font-size:24px; /*tamanho do texto*/
     text-decoration: none; /*decoração do link (sublinhado, pontinhos, etc)*/
     padding: 4px 0 4px 0;
+    margin-right: 32px;
     
 }
 
